--- a/simulations-flash/simulations/equation-grapher/data/equation-grapher/localization/equation-grapher-strings_iw.xml
+++ b/simulations-flash/simulations/equation-grapher/data/equation-grapher/localization/equation-grapher-strings_iw.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--equation-grapher-strings_iw.xml created Sat Jul 17 00:02:32 IDT 2010 using: equation-grapher 2.01.00 (37298), translation-utility 2.08.00 (39581) Apr 2, 2010-->
+<!--equation-grapher-strings_iw.xml created Mon Oct 17 14:40:27 MDT 2011 using: equation-grapher 2.02.00 (52283), translation-utility 2.12.00 (57171) Oct 3, 2011-->
 <SimStrings>
 <string key="showYEq" value="הצג y ="/>
 <string key="erase" value="מחק"/>
 <string key="save" value="שמור"/>
 <string key="zero" value="אפס"/>
 <string key="simTitle" value="מציג גרפים -  משוואה ריבועית"/>
+<string key="translation.credits" value="&lt;html&gt;&lt;center&gt;דוידסון אונליין - למידה מתוקשבת &lt;Br&gt;http://davidson.weizmann.ac.il/online/tikshuv &lt;/center&gt;&lt;/html&gt;"/>
 </SimStrings>
