--- a/trunk/simulations-flash/simulations/faradays-law/data/faradays-law/localization/faradays-law-strings_iw.xml
+++ b/trunk/simulations-flash/simulations/faradays-law/data/faradays-law/localization/faradays-law-strings_iw.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--faradays-law-strings_iw.xml created Mon May 24 21:48:27 IDT 2010 using: faradays-law 2.01.00 (37303), translation-utility 2.08.00 (39581) Apr 2, 2010-->
+<!--faradays-law-strings_iw.xml created Mon Oct 17 14:45:45 MDT 2011 using: faradays-law 2.02.00 (52648), translation-utility 2.12.00 (57171) Oct 3, 2011-->
 <SimStrings>
 <string key="twoCoils" value="שני סלילים"/>
 <string key="n" value="N"/>
+<string key="translation.credits" value="&lt;html&gt;&lt;center&gt;דוידסון אונליין - למידה מתוקשבת &lt;Br&gt;http://davidson.weizmann.ac.il/online/tikshuv &lt;/center&gt;&lt;/html&gt;"/>
 <string key="noSound" value="ללא קול"/>
 <string key="showFieldLines" value="הראה קווי שדה"/>
 <string key="voltage" value="מתח"/>
