--- a/trunk/simulations-flash/simulations/geometric-optics/data/geometric-optics/localization/geometric-optics-strings_iw.xml
+++ b/trunk/simulations-flash/simulations/geometric-optics/data/geometric-optics/localization/geometric-optics-strings_iw.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--geometric-optics-strings_iw.xml created Sat Jun 12 22:24:10 IDT 2010 using: geometric-optics 2.04.00 (37306), translation-utility 2.08.00 (39581) Apr 2, 2010-->
+<!--geometric-optics-strings_iw.xml created Mon Oct 17 14:48:51 MDT 2011 using: geometric-optics 2.05.00 (52650), translation-utility 2.12.00 (57171) Oct 3, 2011-->
 <SimStrings>
 <string key="draggableScreen" value="מסך ניתן להזזה"/>
 <string key="draggableLens" value="עדשה ניתנת להזזה"/>
@@ -21,5 +21,6 @@
 <string key="secondSource" value="נקודה שנייה"/>
 <string key="hideHelp" value="הסתר עזרה"/>
 <string key="refractiveIndex" value="מקדם שבירה"/>
+<string key="translation.credits" value="&lt;html&gt;&lt;center&gt;דוידסון אונליין - למידה מתוקשבת &lt;Br&gt;http://davidson.weizmann.ac.il/online/tikshuv &lt;/center&gt;&lt;/html&gt;"/>
 <string key="manyRays" value="קרניים רבות"/>
 </SimStrings>
