--- a/simulations-flash/simulations/ohms-law/data/ohms-law/localization/ohms-law-strings_iw.xml
+++ b/simulations-flash/simulations/ohms-law/data/ohms-law/localization/ohms-law-strings_iw.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--ohms-law-strings_iw.xml created Sat May 22 23:43:05 IDT 2010 using: ohms-law 2.01.00 (37318), translation-utility 2.08.00 (39581) Apr 2, 2010-->
+<!--ohms-law-strings_iw.xml created Mon Oct 17 14:58:07 MDT 2011 using: ohms-law 2.03.00 (51206), translation-utility 2.12.00 (57171) Oct 3, 2011-->
 <SimStrings>
 <string key="currentEq" value="זרם = "/>
 <string key="resistance" value="התנגדות"/>
 <string key="simTitle" value="חוק אוהם"/>
 <string key="sound" value="קול"/>
+<string key="translation.credits" value="&lt;html&gt;&lt;center&gt;דוידסון אונליין - למידה מתוקשבת &lt;Br&gt;http://davidson.weizmann.ac.il/online/tikshuv &lt;/center&gt;&lt;/html&gt;"/>
 <string key="voltage" value="מתח"/>
 </SimStrings>
