10/15/2011	all sims	iw	Maagar.Mada@weizmann.ac.il	Erez S. Garty	translations	added in translation credits

--- a/simulations-flash/simulations/plinko-probability/data/plinko-probability/localization/plinko-probability-strings_iw.xml
+++ b/simulations-flash/simulations/plinko-probability/data/plinko-probability/localization/plinko-probability-strings_iw.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--plinko-probability-strings_iw.xml created Sat Jul 17 00:19:25 IDT 2010 using: plinko-probability 2.01.00 (37320), translation-utility 2.08.00 (39581) Apr 2, 2010-->
+<!--plinko-probability-strings_iw.xml created Mon Oct 17 15:00:12 MDT 2011 using: plinko-probability 2.02.00 (53818), translation-utility 2.12.00 (57171) Oct 3, 2011-->
 <SimStrings>
 <string key="none" value="אף אחד"/>
 <string key="number" value="מספר"/>
@@ -16,7 +16,8 @@
 <string key="stop" value="עצור"/>
 <string key="ball" value="כדור"/>
 <string key="help" value="עזרה"/>
-<string key="show" value=":הצג"/>
+<string key="translation.credits" value="&lt;html&gt;&lt;center&gt;דוידסון אונליין - למידה מתוקשבת &lt;Br&gt;http://davidson.weizmann.ac.il/online/tikshuv &lt;/center&gt;&lt;/html&gt;"/>
 <string key="reset" value="התחל מחדש"/>
+<string key="show" value=":הצג"/>
 <string key="autoScale" value="התאמה אוטומטית"/>
 </SimStrings>
