--- a/simulations-flash/simulations/resistance-in-a-wire/data/resistance-in-a-wire/localization/resistance-in-a-wire-strings_iw.xml
+++ b/simulations-flash/simulations/resistance-in-a-wire/data/resistance-in-a-wire/localization/resistance-in-a-wire-strings_iw.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--resistance-in-a-wire-strings_iw.xml created Mon May 24 21:56:04 IDT 2010 using: resistance-in-a-wire 2.01.00 (37324), translation-utility 2.08.00 (39581) Apr 2, 2010-->
+<!--resistance-in-a-wire-strings_iw.xml created Mon Oct 17 15:03:05 MDT 2011 using: resistance-in-a-wire 2.02.00 (52286), translation-utility 2.12.00 (57171) Oct 3, 2011-->
 <SimStrings>
 <string key="cm" value="ס&quot;מ"/>
 <string key="resistanceEq" value="התנגדות = "/>
 <string key="ohm" value="אוהם"/>
 <string key="simTitle" value="התנגדות בתיל"/>
+<string key="translation.credits" value="&lt;html&gt;&lt;center&gt;דוידסון אונליין - למידה מתוקשבת &lt;Br&gt;http://davidson.weizmann.ac.il/online/tikshuv &lt;/center&gt;&lt;/html&gt;"/>
 </SimStrings>
