--- a/simulations-java/simulations/states-of-matter/changes.txt
+++ b/simulations-java/simulations/states-of-matter/changes.txt
@@ -1,3 +1,4 @@
+> Moved "Kelvin/Celsius" option from "Options" menu into "Teacher" menu
 > Made it so the selected atom/molecule changes when clicking on the image next to the radio button in the control panel
 > Changed Argon color from blue-green to pink
 # 1.08.05 (57713) Oct 17, 2011
