nuclear-physics: deployed version 3.24.03 (57801) Oct 19, 2011

--- a/simulations-java/simulations/nuclear-physics/changes.txt
+++ b/simulations-java/simulations/nuclear-physics/changes.txt
@@ -1,3 +1,5 @@
+# 3.24.03 (57801) Oct 19, 2011
+10/19/11 Fixed an issue with the movement of the energy handles on the alpha particle energy graph.
 # 3.24.02 (57798) Oct 19, 2011
 10/19/11 Publishing to dev for review of fixes for several charts, see #3071.
 > Fixed an issue with the scaling of several of the charts that caused them to look bad on netbooks.
