--- a/trunk/simulations-java/simulations/dilutions/changes.txt
+++ b/trunk/simulations-java/simulations/dilutions/changes.txt
@@ -1,3 +1,4 @@
+10/17/11 change Reset All button from yellow to light gray, it shouldn't receive that much attention
 10/17/11 first pass at a more 3D-looking beaker, using image provided by NP. Solution and precipitate shapes have not been revised.
 10/17/11 make beaker label narrower
 10/17/11 rename tab "Dilution Equation" to "Dilution Intro"
