--- a/trunk/simulations-java/simulations/dilutions/data/dilutions/localization/dilutions-strings.properties
+++ b/trunk/simulations-java/simulations/dilutions/data/dilutions/localization/dilutions-strings.properties
@@ -2,7 +2,6 @@
 
 beersLaw=Beer's Law
 beersLawLab=Beer's Law Lab
-concentrationMolarity=<html><center>Concentration<br>(Molarity)</html>
 dilutions.name=Dilutions
 dilutionIntro=Dilution Intro
 full=full
@@ -17,8 +16,9 @@ none=none
 saturated=Saturated!
 showValues=Show values
 solute=Solute
-soluteAmount=<html><center>Solute<br>Amount</html>
-solutionVolume=<html><center>Solution<br>Volume</html>
+soluteAmount=<html><center>Solute<br>Amount<br>(Moles)</html>
+solutionConcentration=<html><center>Solution<br>Concentration<br>(Molarity)</html>
+solutionVolume=<html><center>Solution<br>Volume<br>(Liters)</html>
 
 # units
 units.molarity=M
