--- a/simulations-java/simulations/dilutions/changes.txt
+++ b/simulations-java/simulations/dilutions/changes.txt
@@ -1,3 +1,4 @@
+10/21/11 horizontally center the "Saturated!" indicator in the beaker's cylinder
 10/21/11 change request: remove "Show values" in Molarity tab (but feature may come back in future, so don't remove from code)
 10/21/11 change request: different labels on sliders and concentration display in Molarity tab
 10/20/11 change solution node to a cylinder
