--- a/trunk/simulations-java/simulations/dilutions/TODO.txt
+++ b/trunk/simulations-java/simulations/dilutions/TODO.txt
@@ -7,12 +7,11 @@ DESIGN
 HIGH
 - distribute precipitate on bottom of 3D beaker
 - differentiate solution surface (line? color?)
-- use PrecisionDecimal in the model, 2 decimal places
 - improve look of sliders
-- labels in Molarity tab: "Solute Amount / (Moles)" "Solution Volume / (Liters)" and "Solutions Concentration / (Molarity)"
 - grey out the unavailable portion of the concentration readout in saturated solutions
 
 MEDIUM
+- use PrecisionDecimal in the model, 2 decimal places (if we're showing values)
 
 LOW
 - repackage
