Improved look and randomization of fraction representations

--- a/simulations-java/simulations/fractions/changes.txt
+++ b/simulations-java/simulations/fractions/changes.txt
@@ -1,3 +1,4 @@
+Improved look and randomization of fraction representations
 Added balance and weight model
 # 0.00.05 (57746) Oct 19, 2011
 Matching Game tab: Fixed centering of fractions
