--- a/simulations-java/simulations/balance-and-torque/data/balance-and-torque/localization/balance-and-torque-strings.properties
+++ b/simulations-java/simulations/balance-and-torque/data/balance-and-torque/localization/balance-and-torque-strings.properties
@@ -30,7 +30,7 @@ checkAnswer = Check Answer
 tryAgain = Try Again
 next = Next
 displayCorrectAnswer = Display Correct Answer
-showRuler = Show Ruler
+showRulers = Show Rulers
 massEquals = Mass =
 bricks = Bricks
 people = People
