10/24/2011	properties	hu	nasa@enternet.hu	Sandor Nagy	PhET: New common strings available for translation

--- a/simulations-java/common/phetcommon/data/phetcommon/localization/phetcommon-strings_hu.properties
+++ b/simulations-java/common/phetcommon/data/phetcommon/localization/phetcommon-strings_hu.properties
@@ -1,5 +1,5 @@
-#phetcommon-strings_hu.properties created Tue May 10 18:31:26 CEST 2011 using: java-common-strings 1.21.00 (50404), translation-utility 2.10.00 (48775) Feb 9, 2011
-#Tue May 10 18:31:26 CEST 2011
+#phetcommon-strings_hu.properties created Mon Oct 24 19:53:28 CEST 2011 using: java-common-strings 1.23.00 (57909), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 24 19:53:28 CEST 2011
 Games.label.level=Szint\: {0}
 Common.updates.errorMessage=Friss\u00EDt\u00E9s k\u00F6zben hiba t\u00F6rt\u00E9nt. Pr\u00F3b\u00E1lkozzon <br>k\u00E9s\u0151bb vagy l\u00E1togasson ide\: {0}.
 XMLPersistenceManager.save.error.encode=<html>K\u00F3dol\u00E1si hiba\:<br>{0}</html>
@@ -40,6 +40,7 @@ Common.FileMenu.Preferences=Be\u00E1ll\u00EDt\u00E1sok...
 Common.FileMenu.Load=Konfigur\u00E1ci\u00F3 bet\u00F6lt\u00E9se...
 Common.updates.downloadingSimJar=szimul\u00E1ci\u00F3s JAR f\u00E1jl let\u00F6lt\u00E9se...
 Games.radioButton.off=ki
+Jme.copyThisToTheClipboard=M\u00E1solja ezt a v\u00E1g\u00F3lapra\!
 ColorChooser.swatchesRecentText=Jelenlegi\:
 Common.updates.updateAvailable=L\u00E9tezik friss\u00EDt\u00E9s
 Common.statistics.host_locale_language=Szerver nyelve\:
@@ -65,6 +66,7 @@ Common.ClockControlPanel.Restart=\u00DAjraind\u00EDt
 Common.statistics.sim_version_timestamp=Szimul\u00E1ci\u00F3verzi\u00F3 (id\u0151b\u00E9lyegz\u0151)\:
 Common.updates.installer.yes=Igen\!
 Common.phetInstaller=Offl\u00E1jn PhET  Webhelytelep\u00EDt\u0151
+Jme.thisSimulationWasUnableToStart=A szimul\u00E1ci\u00F3 nem tudott elindulni.
 Common.HelpMenu.About=N\u00E9vjegy...
 Common.ModelSlider.OutOfRange=T\u00FAl kis/nagy \u00E9rt\u00E9k
 Common.About.CreditsDialog.TranslationCreditsTitle=Magyar\u00EDt\u00E1s\:
@@ -108,6 +110,7 @@ Common.softwareAgreement.message=A PhET-szimul\u00E1ci\u00F3k minim\u00E1lis men
 Common.About.Version=Verzi\u00F3\:
 Common.ErrorDialog.contactPhet=Ha a probl\u00E9ma ism\u00E9tl\u0151dik, k\u00FCldje az al\u00E1bbi r\u00E9szleteket ide\: {0}
 Common.About.CreditsDialog.lead-design=Diz\u00E1jnir\u00E1ny\u00EDt\u00E1s
+Jme.moreInformation=<html><body>A videok\u00E1rtya meghajt\u00F3j\u00E1nak friss\u00EDt\u00E9se seg\u00EDthet a probl\u00E9m\u00E1n.<br/>Tov\u00E1bbi inform\u00E1ci\u00F3\u00E9rt l\u00E1togasson ide {0}, vagy m\u00E1solja bele<br/>a k\u00F6vetkez\u0151t egy emailbe, majd k\u00FCldje el ide {1}.<br/></body></html>
 Common.statistics.user_preference_file_creation_time=Be\u00E1ll\u00EDt\u00E1sok f\u00E1jlgener\u00E1l\u00E1s id\u0151b\u00E9lyegz\u0151je\:
 Common.updates.errorWritePermissions=<html>A friss\u00EDt\u00E9st nem lehetett v\u00E9grehajtani.<br>Nincs \u00EDr\u00E1si enged\u00E9lye ide\: {0}.<br>K\u00E9rjen seg\u00EDts\u00E9get  rendszergazd\u00E1j\u00E1t\u00F3l.<br></html>
 Common.choice.no=Nem
@@ -118,7 +121,7 @@ Common.updates.versionComparison=<html> "{0}" jelenlegi verzi\u00F3ja {1}.<br>\u
 Common.statistics.sim_locale_language=Nyelv\:
 Common.statistics.user_installation_timestamp=PhET-telep\u00EDt\u00E9s id\u0151b\u00E9lyegz\u0151je\:
 Common.statistics.message_version=\u00DCzenetverzi\u00F3\:
-Common.ModelSlider.Description=Rossz \u00E9rt\u00E9k
+Common.ModelSlider.Description=Helytelen \u00E9rt\u00E9k.
 Common.updates.installer.moreMessage=<html>Az offl\u00E1jn PhET- webhely  friss\u00EDt\u00E9se lehet\u0151v\u00E9 teszi, <br>hogy el\u00E9rje a leg\u00FAjabb PhET-szimul\u00E1ci\u00F3kat<br>\u00E9s a kieg\u00E9sz\u00EDt\u0151 anyagokat.<br><br>Ha a friss\u00EDt\u00E9s mellett d\u00F6nt, egy \u00FAj b\u00F6ng\u00E9sz\u0151ablak <br>ny\u00EDlik meg a PhET-webhellyel, ahonnan let\u00F6ltheti<br>az offl\u00E1jn PhET- webhely telep\u00EDt\u0151j\u00E9t.</html>
 ControlPanel.message.confirmResetAll=Minden be\u00E1ll\u00EDt\u00E1st vissza\u00E1ll\u00EDt?
 Common.HelpMenu.Help=S\u00FAg\u00F3
@@ -132,6 +135,7 @@ FileChooser.newFolderErrorText=Hiba az \u00FAj k\u00F6nyvt\u00E1r l\u00E9trehoz\
 Common.updates.skipThisUpdate=Kihagyom ezt a verzi\u00F3t
 Common.About.CreditsButton=Hivatkoz\u00E1s...
 FileChooser.saveDialogTitleText=Elment
+Common.TeacherMenu=Tan\u00E1r
 XMLPersistenceManager.load.title=Konfigur\u00E1ci\u00F3 bet\u00F6lt\u00E9se
 timeseries.control.panel.playback=Visszaj\u00E1tsz\u00E1s
 Common.updates.checkForInstallerUpdate=Offl\u00E1jn PhET- webhely telep\u00EDt\u0151 friss\u00EDt\u00E9s\u00E9nek ellen\u0151rz\u00E9se...
